Added the menu section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,48 @@
     <button id="main-events-button-read-more">READ MORE</button>
   </section>
 
+  <section id="main-section-img-background">
+    <p id="main-section-img-background-first-p">FEEDBACK</p>
+    <p id="main-section-img-background-second-p">Exclusive <b>restaurant in Paris</b>, the ultimate way to get amazing food from the best chefs in the city.<b> Great atmosphere included</b>.</p>
+  </section>
+
+  <section id="main-section-delicious-from-chef">
+    <p>OUR MENU</p>
+    <h1>Delicious From the Chef</h1>
+  </section>
+
+  <section id="main-section-menu">
+    <div class="main-section-menu-div">
+      <p class="main-section-menu-div-plate-name">PEAR SALAD / $11</p>
+      <p class="main-section-menu-div-plate-ingredients">Reid's Orchard Pears / Bitter Greens / Granola / Big Firefly / Farms Black and Blue / Pine Nut Vinaigrette</p>
+    </div>
+
+    <div class="main-section-menu-div">
+      <p class="main-section-menu-div-plate-name">FARM GREENS / $9</p>
+      <p class="main-section-menu-div-plate-ingredients">Honey Vinaigrette / House Cheese Crouton / Fine Herbs</p>
+    </div>
+
+    <div class="main-section-menu-div">
+      <p class="main-section-menu-div-plate-name">RICOTTA GNUD / $18</p>
+      <p class="main-section-menu-div-plate-ingredients">Marinated Sardine / Red Currant / Chanterelles / Pine Nuts / Mantecato Vitello / Fennel / Olive / Pepitas</p>
+    </div>
+
+    <div class="main-section-menu-div">
+      <p class="main-section-menu-div-plate-name">BRODETTO DI PESCE / $9</p>
+      <p class="main-section-menu-div-plate-ingredients">Adriactic Seafood Soup / Clams / Prawns / Livornese / Langoustine Scallop / Celery / Olive</p>
+    </div>
+
+    <div class="main-section-menu-div">
+      <p class="main-section-menu-div-plate-name">GRILLED KALE / $9</p>
+      <p class="main-section-menu-div-plate-ingredients">Bitter Greens / House Cheese Crouton / Kamon Iberico</p>
+    </div>
+
+    <div class="main-section-menu-div">
+      <p class="main-section-menu-div-plate-name">CANESTRELLI / $18</p>
+      <p class="main-section-menu-div-plate-ingredients">Reid Orchard Pears / Bitter Greens / House Cheese Crouton / Marinated Sardine / Chanterelles / Clams</p>
+    </div>
+  </section>
+
 </main>
 
 <footer></footer>
