Finished the mobile layout

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </header>
 
 <main id="page-main">
+
   <section id="page-main-first-section">
     <p id="page-main-first-section-first-p">ABOUT OUR RESTAURANT</p>
     <p id="page-main-first-section-second-p">Exclusive <b>restaurant in Paris</b>, the ultimate way to get amazing food from the best chefs in the city.<b> Great atmosphere included</b>.</p>
@@ -129,9 +130,71 @@
     </div>
   </section>
 
+  <section>  
+    <div id="main-section-plates-first-pictures" class="main-section-plates-pictures"></div>
+
+    <div id="main-section-plates-second-pictures"></div>
+
+   <div id="main-section-plates-third-pictures" class="main-section-plates-pictures"></div>
+
+   <div id="main-section-plates-fourth-pictures" class="main-section-plates-pictures"></div>
+  </section>
+
+  <section id="main-section-icon">
+    <div class="main-section-icon-div">
+      <img src="/img/meat.svg" alt="Chicken wing icon">
+      <h1>566</h1>
+      <p>PIESE OF MEET</p>
+    </div>
+
+    <div class="main-section-icon-div">
+      <img src="/img/plate.svg" alt="Plate icon">
+      <h1>849</h1>
+      <p>PLATES OF RICE</p>
+    </div>
+
+    <div class="main-section-icon-div">
+      <img src="/img/croissant.svg" alt="croissant icon">
+      <h1>424</h1>
+      <p>CROISSANTS</p>
+    </div>
+
+    <div id="main-section-circle-div">
+      <p>WE COOK EVERYDAY</p>
+    </div>
+  </section>
+
+  <section id="main-section-contact-us">
+    <p>CONTACT US</p>
+    <h1>Get in touch</h1>
+  </section>
+
+  <section id="main-section-submit">
+    <input type="text" placeholder="Enter your Name" class="main-section-submit-data">
+    <input type="email" placeholder="Enter a valid email address" class="main-section-submit-data">
+    <div id="main-section-submit-div-terms">
+      <input type="checkbox"> I accept the <a href="#">Terms of  Service</a>
+    </div>
+  </section>
+
+  <section id="main-section-submit-button">
+    <button>SUBMIT</button>
+  </section>
+
 </main>
 
-<footer></footer>
+<footer id="page-footer">
+  
+  <section>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non aperiam tenetur quo voluptate!</p>
+  </section>
+
+  <section id="page-footer-projects">
+    <p>Developed by Gabriel Santillo</p>
+    <a href="#">Know More About my Projects</a>
+  </section>
+
+</footer>
   
 </body>
 </html>
