Strating to add the media querie for desktop

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header id="page-header">
 
   <section id="page-header-first-section">
-    <img src="img/menu.svg" alt="Menu icon" class="header-icons">
+    <img src="img/menu.svg" alt="Menu icon" class="header-icons" id="page-header-icon-menu">
     <img src="img/food_logo.png" alt="Restaurant logo" id="header-food-logo">
   </section>
 
@@ -31,6 +31,7 @@
     <p id="page-main-first-section-second-p">Exclusive <b>restaurant in Paris</b>, the ultimate way to get amazing food from the best chefs in the city.<b> Great atmosphere included</b>.</p>
   </section>
 
+  <div id="page-main-read-more-mobile-layout">
   <section id="main-square-first-picture">
   </section>
 
@@ -60,6 +61,46 @@
     <p class="main-articles-p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
     <a href="#" class="main-articles-p-link">READ MORE</a>
   </section>
+  </div>
+
+  <div id="page-main-read-more-desktop-layout">
+    <section class="page-main-read-more-column">
+      <section id="main-square-first-picture">
+      </section>
+
+      <section class="main-articles">
+        <p class="main-articles-p">COMUNITY</p>
+        <p class="main-articles-p-bold"><strong>Healthy food in social networks, with us interesting</strong></p>
+        <p class="main-articles-p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <a href="#" class="main-articles-p-link">READ MORE</a>
+      </section>
+    </section>
+
+    <section class="page-main-read-more-column">
+      <section class="main-articles">
+        <p class="main-articles-p">HISTORY</p>
+        <p class="main-articles-p-bold"><strong>Strange story of the emergence of healthy food</strong></p>
+        <p class="main-articles-p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <a href="#" class="main-articles-p-link">READ MORE</a>
+      </section>
+
+      <section id="main-square-second-picture">
+      </section>
+    </section>
+
+    <section class="page-main-read-more-column">
+      <section id="main-square-third-picture">
+      </section>
+
+      <section class="main-articles">
+        <p class="main-articles-p">PHILOSOPHY</p>
+        <p class="main-articles-p-bold"><strong>Only the best food, the best musicians and the best guests</strong></p>
+        <p class="main-articles-p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <a href="#" class="main-articles-p-link">READ MORE</a>
+      </section>
+    </section>
+
+  </div>
 
   <section id="main-events">
     <p id="main-events-p">EVENTS</p>
