Adding the desktop layout, adding the pictures below the menu

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <h1 id="main-events-h2">Events of Healthy Food</h1>
   </section>
 
+  <div id="main-events-column">
   <section class="main-events-dates">
     <h2 class="main-events-h2">25</h2>
     <p class="main-events-first-p">APRIL</p>
@@ -123,9 +124,10 @@
     <h2 class="main-events-h2">19</h2>
     <p class="main-events-first-p">JUNE</p>
     <p class="main-events-second-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quae voluptatum, ullam laudantium sapiente excepturi ex nobis tenetur repellat dolore neque ducimus illum dolores quibusdam praesentium. Ipsa libero porro quas!</p>
-  </section>
+  </section> 
+  </div>
 
-  <section id="main-events-button">
+   <section id="main-events-button">
     <button id="main-events-button-read-more">READ MORE</button>
   </section>
 
@@ -140,45 +142,64 @@
   </section>
 
   <section id="main-section-menu">
-    <div class="main-section-menu-div">
-      <p class="main-section-menu-div-plate-name">PEAR SALAD / $11</p>
-      <p class="main-section-menu-div-plate-ingredients">Reid's Orchard Pears / Bitter Greens / Granola / Big Firefly / Farms Black and Blue / Pine Nut Vinaigrette</p>
+    <div id="main-section-menu-first-column">
+      <div class="main-section-menu-div">
+        <p class="main-section-menu-div-plate-name">PEAR SALAD / $11</p>
+        <p class="main-section-menu-div-plate-ingredients">Reid's Orchard Pears / Bitter Greens / Granola / Big Firefly / Farms Black and Blue / Pine Nut Vinaigrette</p>
+      </div>
+
+      <div class="main-section-menu-div">
+        <p class="main-section-menu-div-plate-name">FARM GREENS / $9</p>
+        <p class="main-section-menu-div-plate-ingredients">Honey Vinaigrette / House Cheese Crouton / Fine Herbs</p>
+      </div>
+
+      <div class="main-section-menu-div">
+        <p class="main-section-menu-div-plate-name">RICOTTA GNUD / $18</p>
+        <p class="main-section-menu-div-plate-ingredients">Marinated Sardine / Red Currant / Chanterelles / Pine Nuts / Mantecato Vitello / Fennel / Olive / Pepitas</p>
+      </div>
     </div>
 
-    <div class="main-section-menu-div">
-      <p class="main-section-menu-div-plate-name">FARM GREENS / $9</p>
-      <p class="main-section-menu-div-plate-ingredients">Honey Vinaigrette / House Cheese Crouton / Fine Herbs</p>
-    </div>
+    <div id="main-section-menu-second-column">
+      <div class="main-section-menu-div">
+        <p class="main-section-menu-div-plate-name">BRODETTO DI PESCE / $9</p>
+        <p class="main-section-menu-div-plate-ingredients">Adriactic Seafood Soup / Clams / Prawns / Livornese / Langoustine Scallop / Celery / Olive</p>
+      </div>
 
-    <div class="main-section-menu-div">
-      <p class="main-section-menu-div-plate-name">RICOTTA GNUD / $18</p>
-      <p class="main-section-menu-div-plate-ingredients">Marinated Sardine / Red Currant / Chanterelles / Pine Nuts / Mantecato Vitello / Fennel / Olive / Pepitas</p>
-    </div>
+      <div class="main-section-menu-div">
+        <p class="main-section-menu-div-plate-name">GRILLED KALE / $9</p>
+        <p class="main-section-menu-div-plate-ingredients">Bitter Greens / House Cheese Crouton / Kamon Iberico</p>
+      </div>
 
-    <div class="main-section-menu-div">
-      <p class="main-section-menu-div-plate-name">BRODETTO DI PESCE / $9</p>
-      <p class="main-section-menu-div-plate-ingredients">Adriactic Seafood Soup / Clams / Prawns / Livornese / Langoustine Scallop / Celery / Olive</p>
-    </div>
-
-    <div class="main-section-menu-div">
-      <p class="main-section-menu-div-plate-name">GRILLED KALE / $9</p>
-      <p class="main-section-menu-div-plate-ingredients">Bitter Greens / House Cheese Crouton / Kamon Iberico</p>
-    </div>
-
-    <div class="main-section-menu-div">
-      <p class="main-section-menu-div-plate-name">CANESTRELLI / $18</p>
-      <p class="main-section-menu-div-plate-ingredients">Reid Orchard Pears / Bitter Greens / House Cheese Crouton / Marinated Sardine / Chanterelles / Clams</p>
+      <div class="main-section-menu-div">
+        <p class="main-section-menu-div-plate-name">CANESTRELLI / $18</p>
+        <p class="main-section-menu-div-plate-ingredients">Reid Orchard Pears / Bitter Greens / House Cheese Crouton / Marinated Sardine / Chanterelles / Clams</p>
+      </div>
     </div>
   </section>
 
-  <section>  
+  <section id="main-section-plates-mobile-layout">  
     <div id="main-section-plates-first-pictures" class="main-section-plates-pictures"></div>
 
-    <div id="main-section-plates-second-pictures"></div>
+    <div id="main-section-plates-second-pictures"
+    class="main-section-plates-pictures"></div>
 
    <div id="main-section-plates-third-pictures" class="main-section-plates-pictures"></div>
 
    <div id="main-section-plates-fourth-pictures" class="main-section-plates-pictures"></div>
+  </section>
+
+  <section id="main-section-plates-desktop-layout">
+    <div id="main-section-plates-first-pictures" ></div>
+
+    <div>
+      <div id="main-section-plates-second-pictures"></div>
+
+      <div>
+        <div id="main-section-plates-third-pictures" ></div>
+
+        <div id="main-section-plates-fourth-pictures"></div>
+      </div>
+    </div>
   </section>
 
   <section id="main-section-icon">
