Added but not finished tha desktop layout

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   </section> 
   </div>
 
-   <section id="main-events-button">
+  <section id="main-events-button">
     <button id="main-events-button-read-more">READ MORE</button>
   </section>
 
@@ -180,8 +180,7 @@
   <section id="main-section-plates-mobile-layout">  
     <div id="main-section-plates-first-pictures" class="main-section-plates-pictures"></div>
 
-    <div id="main-section-plates-second-pictures"
-    class="main-section-plates-pictures"></div>
+    <div id="main-section-plates-second-pictures"></div>
 
    <div id="main-section-plates-third-pictures" class="main-section-plates-pictures"></div>
 
@@ -189,15 +188,17 @@
   </section>
 
   <section id="main-section-plates-desktop-layout">
-    <div id="main-section-plates-first-pictures" ></div>
+    <div id="main-section-plates-first-pictures" class="main-section-plates-pictures"></div>
 
+    <div id="main-section-plates-second-pictures-div">
     <div>
       <div id="main-section-plates-second-pictures"></div>
+    </div>
 
       <div>
-        <div id="main-section-plates-third-pictures" ></div>
+        <div id="main-section-plates-third-pictures" class="main-section-plates-pictures"></div>
 
-        <div id="main-section-plates-fourth-pictures"></div>
+        <div id="main-section-plates-fourth-pictures" class="main-section-plates-pictures"></div>
       </div>
     </div>
   </section>
