Corrected the section with only images to looks better

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <div id="main-section-plates-second-pictures"></div>
     </div>
 
-      <div>
+      <div id="main-section-plates-second-pictures-div-two">
         <div id="main-section-plates-third-pictures" class="main-section-plates-pictures"></div>
 
         <div id="main-section-plates-fourth-pictures" class="main-section-plates-pictures"></div>
