Correcting some designs on desktop

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   </div>
 
   <div id="page-main-read-more-desktop-layout">
+
     <section class="page-main-read-more-column">
       <section id="main-square-first-picture">
       </section>
@@ -73,6 +74,9 @@
         <p class="main-articles-p-bold"><strong>Healthy food in social networks, with us interesting</strong></p>
         <p class="main-articles-p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         <a href="#" class="main-articles-p-link">READ MORE</a>
+      </section>
+
+      <section id="main-square-third-picture">
       </section>
     </section>
 
@@ -86,13 +90,8 @@
 
       <section id="main-square-second-picture">
       </section>
-    </section>
 
-    <section class="page-main-read-more-column">
-      <section id="main-square-third-picture">
-      </section>
-
-      <section class="main-articles">
+       <section class="main-articles">
         <p class="main-articles-p">PHILOSOPHY</p>
         <p class="main-articles-p-bold"><strong>Only the best food, the best musicians and the best guests</strong></p>
         <p class="main-articles-p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
@@ -188,17 +187,15 @@
   </section>
 
   <section id="main-section-plates-desktop-layout">
-    <div id="main-section-plates-first-pictures" class="main-section-plates-pictures"></div>
-
-    <div id="main-section-plates-second-pictures-div">
-    <div>
+    <div id="main-section-plates-first-pictures"></div>
+    
       <div id="main-section-plates-second-pictures"></div>
-    </div>
+    
 
       <div id="main-section-plates-second-pictures-div-two">
-        <div id="main-section-plates-third-pictures" class="main-section-plates-pictures"></div>
+        <div id="main-section-plates-third-pictures"></div>
 
-        <div id="main-section-plates-fourth-pictures" class="main-section-plates-pictures"></div>
+        <div id="main-section-plates-fourth-pictures"></div>
       </div>
     </div>
   </section>
