Finished the desktop layout

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
   <section id="main-section-plates-desktop-layout">
     <div id="main-section-plates-first-pictures"></div>
     
+    <div id="main-section-plates-second-column">
       <div id="main-section-plates-second-pictures"></div>
     
 
@@ -198,6 +199,7 @@
         <div id="main-section-plates-fourth-pictures"></div>
       </div>
     </div>
+  </div>
   </section>
 
   <section id="main-section-icon">
